--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "expo-auth-session": "~6.2.1"
+    "expo-auth-session": "~6.2.1",
+    "expo-notifications": "~0.31.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
